Req#778845 (partly), Req#828750. Related photos feature.

--- a/lang/zoph_strings.txt
+++ b/lang/zoph_strings.txt
@@ -24,6 +24,7 @@ Color Schemes=
 Confirm deletion of '%s' and its subalbums:=
 Confirm deletion of '%s' and its subcategories:=
 Confirm deletion of '%s'=
+Confirm deletion of this relationship=
 Copy Color Scheme=
 Could not build message.=
 Could not copy %s to %s.=
@@ -35,6 +36,8 @@ Could not rename %s to %s.=
 Could not send mail.=
 Created directory=
 Dated directory will be appended=
+Description for first photo=
+Description for second photo=
 E-Mail Photo=
 Edit Photos (Page %s/%s)=
 Fields specified below will apply to all images imported.=
@@ -53,6 +56,7 @@ Importing images...=
 Insert failed.=
 Insufficient permissions to edit photo=
 Invalid path=
+Keep first photo selected=
 Most Photographed People=
 Most Photographed Places=
 Most Populated Albums=
@@ -128,9 +132,9 @@ Zoph stands for <strong>z</strong>oph <strong>o</strong>rganizes <strong>ph</str
 Zoph version %s, released %s.=
 about=
 access level=
+add comment=
 add/edit user=
 add=
-add comment=
 address continued=
 address=
 admin=
@@ -179,6 +183,7 @@ copy=
 count=
 country=
 create annotated photo=
+create relation=
 date of birth=
 date of death=
 date=
@@ -300,6 +305,8 @@ random photo=
 rate=
 rating=
 recreate thumbnails=
+relate to selected=
+related photos=
 remove=
 reports=
 return=
@@ -329,6 +336,7 @@ timestamp=
 title=
 to (email)=
 to (name)=
+undo selection for relation=
 update=
 user name=
 user=
