Updated zoph_strings with newest strings

--- a/lang/zoph_strings.txt
+++ b/lang/zoph_strings.txt
@@ -12,6 +12,8 @@ A Photo from %s=
 A photo will be watermarked if the photo level is higher than the watermark level.=
 A possible cause is the upload_max_filesize variable in php.ini=
 About=
+Add comment=
+Admin=
 After this user is created they can be given access to albums.=
 Albums=
 All photos=
@@ -21,12 +23,13 @@ As an admin, user %s has access to all albums.=
 Categories=
 Change Password=
 Color Schemes=
+Comments=
+Confirm deletion of '%s'=
 Confirm deletion of '%s' and its subalbums:=
 Confirm deletion of '%s' and its subcategories:=
-Confirm deletion of '%s'=
+Confirm deletion of comment '<b>%s</b>' by '<b>%s</b>'=
 Confirm deletion of this relationship=
 Copy Color Scheme=
-Could not build message.=
 Could not copy %s to %s.=
 Could not create directory=
 Could not create thumbnail=
@@ -42,13 +45,14 @@ E-Mail Photo=
 Edit Photos (Page %s/%s)=
 Fields specified below will apply to all images imported.=
 File upload failed=
-For accessing these Albums you have to use this URL=
+For accessing these Albums you have to use this URL:=
 Grant access to all existing albums:=
-Granting access to an album will also grant access to that album's ancestors if required.  Granting access to all albums will not overwrite previously granted permissions.=
+Granting access to an album will also grant access to that album's ancestors if required. Granting access to all albums will not overwrite previously granted permissions.=
 Hi=
 Home=
 I have created a Zoph account for you=
-I have enabled access to the following albums for you=
+I have enabled access to the following albums for you:=
+IP address=
 Import=
 Importing Files on the Server=
 Importing a Local File=
@@ -56,12 +60,10 @@ Importing images...=
 Insert failed.=
 Insufficient permissions to edit photo=
 Invalid path=
-Keep first photo selected=
 Most Photographed People=
 Most Photographed Places=
 Most Populated Albums=
 Most Populated Categories=
-Name=
 New Album=
 New Albums on=
 New Category=
@@ -71,6 +73,7 @@ New Photo=
 New Place=
 New User=
 Next=
+No=
 No EXIF header found.=
 No Photos Found=
 No people have been added to this photo.=
@@ -78,47 +81,41 @@ No people were found with a last name beginning with '%s'.=
 No photo was found.=
 No photos were found for this slideshow.=
 No photos were found matching your search criteria.=
-No places were found in a city beginning with '%s'.=
-No=
 Not rated=
-Notify User=
 Notify=
+Notify User=
 Or you may use the %s search page %s to find photos using multiple criteria. You may also view a %s randomly chosen photo %s like the one above.=
 Originally written by Jason Geiger, now maintained by Jeroen Roos with thanks to the following for their contributions:=
 People=
-Photos (Page %s/%s)=
 Places=
 Preferences=
 Prev=
 Processing %s image(s).=
 Reading directory=
 Received file=
-Refine Search=
-Regards=
+Regards,=
 Releases and documentation can be found at %s.=
 Reports=
-Search=
 See this photo in %s=
 Send feedback to %s.=
 Skipping %s: File does not exist.=
 Skipping %s: Unsupported file type.=
-Slideshow=
 The image you requested could not be displayed.=
-The user %s is currently defined as the default user and does not have permission to change its preferences.  The current values are shown below but any changes made will be ignored until a different default user is defined.=
+The user %s is currently defined as the default user and does not have permission to change its preferences. The current values are shown below but any changes made will be ignored until a different default user is defined.=
 The user '%s' is currently defined as the default user and does not have permission to change its password.=
 There are %s photos=
 There are no photos=
 There is %s photo=
-These options are always available in the tabs on the upper right.  Use the %s home %s link to return here. Click on any thumbnail to see a larger version along with information about that photo.=
+These options are always available in the tabs on the upper right. Use the %s home %s link to return here. Click on any thumbnail to see a larger version along with information about that photo.=
 This photo is not in any albums.=
 This photo is not in any categories.=
 To edit your preferences or change your password, click %s here %s.=
-To import images already on the server, specify the absolute path of a file name or directory.  If a directory is specified, all images within the directory will be imported.  If a destination path is given (relative to the top level image dir), the imported images will be copied there.  Otherwise, they will not be moved.=
+To import images already on the server, specify the absolute path of a file name or directory. If a directory is specified, all images within the directory will be imported. If a destination path is given (relative to the top level image dir), the imported images will be copied there. Otherwise, they will not be moved.=
 To upload and import a local file, browse to the file and specify the destination path (relative to the top level image dir) in which it should be placed.=
 Up=
+User=
 Users=
-Welcome %s.  %s currently contains=
-Work=
+Welcome %s. %s currently contains=
 Yes=
 You can upload a single image or a zip or tar file of images.=
 You may search for photos %s taken %s or %s modified %s in the past %s days.=
@@ -132,23 +129,20 @@ Zoph stands for <strong>z</strong>oph <strong>o</strong>rganizes <strong>ph</str
 Zoph version %s, released %s.=
 about=
 access level=
-add comment=
 add/edit user=
-add=
-address continued=
 address=
-admin=
+address continued=
+album=
 album description=
 album name=
 album sort order=
-album=
 albums=
 all=
 and=
 aperture=
 automatically edit photos=
 available=
-browser default=
+by=
 bytes=
 calendar=
 called=
@@ -162,10 +156,10 @@ can view details of people=
 can view details of places=
 cancel=
 categories=
+category=
 category description=
 category name=
 category sort order=
-category=
 ccd width=
 change password=
 city=
@@ -177,44 +171,44 @@ comment=
 comments=
 compression=
 confirm password=
-confirm=
 continue=
 copy=
 count=
 country=
 create annotated photo=
-create relation=
+date=
 date of birth=
 date of death=
-date=
 days ago=
 days past for recent photos links=
 default number of columns on results page=
 default number of rows on results page=
+delete=
 delete album=
 delete category=
 delete color scheme=
+delete comment=
 delete person=
 delete place=
+delete relationship=
 delete user=
-delete=
 description=
 destination path=
-display camera info=
 display=
-edit photos %s to %s of %s=
-edit photos=
-edit preferences=
+display camera info=
 edit=
-email photo=
+edit photos=
+edit photos %s to %s of %s=
+edit preferences=
 email=
+email photo=
 error=
 exposure=
 father=
 female=
+file=
 file name=
 file/directory=
-file=
 first name=
 flash used=
 focal length=
@@ -225,16 +219,15 @@ gender=
 go=
 height=
 home=
-import photos=
 import=
+import photos=
 in this album=
 in this category=
 in this place=
 include URL=
-insert=
 is in photo=
 is not in photo=
-is not set=
+is not set.=
 iso equiv=
 language=
 last ip address=
@@ -243,8 +236,8 @@ last modified=
 last name=
 less than=
 level=
-lightbox album=
 lightbox=
+lightbox album=
 like=
 location=
 logon=
@@ -258,25 +251,26 @@ more than=
 mother=
 name=
 new=
-no city=
-no last name=
 no=
+no children=
+no last name=
+not like=
 not rated=
 notes=
 number of breadcrumbs to show=
 number of categorized photos=
-number of people to add at once=
 number of people=
-number of photos in an album=
+number of people to add at once=
 number of photos=
+number of photos in an album=
 number of places=
 number of results to display on reports page=
-open fullsize photo in new window=
+only visible for admin users=
 open=
-or its children=
+open fullsize photo in new window=
 or=
+or its children=
 order by=
-order=
 overwrite values below=
 parent album=
 parent category=
@@ -286,17 +280,16 @@ path=
 pause=
 people=
 person=
+photo=
 photo %s of %s=
 photo ratings=
-photo=
 photographer=
+photos=
 photos %s to %s of %s=
-photos at=
 photos by=
 photos modified=
 photos of=
 photos taken=
-photos=
 place=
 places=
 position=
@@ -305,7 +298,6 @@ random photo=
 rate=
 rating=
 recreate thumbnails=
-relate to selected=
 related photos=
 remove=
 reports=
@@ -319,9 +311,9 @@ send fullsize=
 show additional attributes=
 show breadcrumbs=
 show descriptions under thumbnails=
+size=
 size of pager on results page=
 size of photos=
-size=
 skip=
 slideshow=
 spouse=
@@ -330,24 +322,24 @@ stop=
 subject=
 submit=
 that have been categorized=
-time to display each photo in a slideshow=
 time=
+time to display each photo in a slideshow=
 timestamp=
 title=
 to (email)=
 to (name)=
-undo selection for relation=
 update=
-user name=
+updated=
 user=
+user name=
 username=
 users=
-view photos=
 view=
+view photos=
 watermark level=
 width=
 work=
 writable=
 yes=
-zip or zip+4=
 zip=
+zip or zip+4=
