--- a/lang/zoph_strings.txt
+++ b/lang/zoph_strings.txt
@@ -20,13 +20,14 @@ All photos=
 An error occurred.=
 Annotate Photo=
 As an admin, user %s has access to all albums.=
+Browser Default=
 Categories=
 Change Password=
 Color Schemes=
 Comments=
-Confirm deletion of '%s'=
 Confirm deletion of '%s' and its subalbums:=
 Confirm deletion of '%s' and its subcategories:=
+Confirm deletion of '%s'=
 Confirm deletion of comment '<b>%s</b>' by '<b>%s</b>'=
 Confirm deletion of this relationship=
 Copy Color Scheme=
@@ -73,7 +74,6 @@ New Photo=
 New Place=
 New User=
 Next=
-No=
 No EXIF header found.=
 No Photos Found=
 No people have been added to this photo.=
@@ -81,9 +81,10 @@ No people were found with a last name beginning with '%s'.=
 No photo was found.=
 No photos were found for this slideshow.=
 No photos were found matching your search criteria.=
+No=
 Not rated=
-Notify=
 Notify User=
+Notify=
 Or you may use the %s search page %s to find photos using multiple criteria. You may also view a %s randomly chosen photo %s like the one above.=
 Originally written by Jason Geiger, now maintained by Jeroen Roos with thanks to the following for their contributions:=
 People=
@@ -130,12 +131,12 @@ Zoph version %s, released %s.=
 about=
 access level=
 add/edit user=
-address=
 address continued=
-album=
+address=
 album description=
 album name=
 album sort order=
+album=
 albums=
 all=
 and=
@@ -156,10 +157,10 @@ can view details of people=
 can view details of places=
 cancel=
 categories=
-category=
 category description=
 category name=
 category sort order=
+category=
 ccd width=
 change password=
 city=
@@ -176,14 +177,13 @@ copy=
 count=
 country=
 create annotated photo=
-date=
 date of birth=
 date of death=
+date=
 days ago=
 days past for recent photos links=
 default number of columns on results page=
 default number of rows on results page=
-delete=
 delete album=
 delete category=
 delete color scheme=
@@ -192,23 +192,24 @@ delete person=
 delete place=
 delete relationship=
 delete user=
+delete=
 description=
 destination path=
-display=
 display camera info=
-edit=
-edit photos=
+display=
 edit photos %s to %s of %s=
+edit photos=
 edit preferences=
-email=
+edit=
 email photo=
+email=
 error=
 exposure=
 father=
 female=
-file=
 file name=
 file/directory=
+file=
 first name=
 flash used=
 focal length=
@@ -219,8 +220,8 @@ gender=
 go=
 height=
 home=
-import=
 import photos=
+import=
 in this album=
 in this category=
 in this place=
@@ -236,8 +237,8 @@ last modified=
 last name=
 less than=
 level=
-lightbox=
 lightbox album=
+lightbox=
 like=
 location=
 logon=
@@ -251,25 +252,25 @@ more than=
 mother=
 name=
 new=
-no=
 no children=
 no last name=
+no=
 not like=
 not rated=
 notes=
 number of breadcrumbs to show=
 number of categorized photos=
-number of people=
 number of people to add at once=
-number of photos=
+number of people=
 number of photos in an album=
+number of photos=
 number of places=
 number of results to display on reports page=
 only visible for admin users=
-open=
 open fullsize photo in new window=
-or=
+open=
 or its children=
+or=
 order by=
 overwrite values below=
 parent album=
@@ -280,16 +281,16 @@ path=
 pause=
 people=
 person=
-photo=
 photo %s of %s=
 photo ratings=
+photo=
 photographer=
-photos=
 photos %s to %s of %s=
 photos by=
 photos modified=
 photos of=
 photos taken=
+photos=
 place=
 places=
 position=
@@ -311,9 +312,9 @@ send fullsize=
 show additional attributes=
 show breadcrumbs=
 show descriptions under thumbnails=
-size=
 size of pager on results page=
 size of photos=
+size=
 skip=
 slideshow=
 spouse=
@@ -322,24 +323,24 @@ stop=
 subject=
 submit=
 that have been categorized=
-time=
 time to display each photo in a slideshow=
+time=
 timestamp=
 title=
 to (email)=
 to (name)=
 update=
 updated=
-user=
 user name=
+user=
 username=
 users=
-view=
 view photos=
+view=
 watermark level=
 width=
 work=
 writable=
 yes=
-zip=
 zip or zip+4=
+zip=
