--- a/lang/zoph_strings.txt
+++ b/lang/zoph_strings.txt
@@ -18,6 +18,7 @@ After this user is created they can be given access to albums.=
 Albums=
 All photos=
 An error occurred.=
+An unknown file upload error occurred.=
 Annotate Photo=
 As an admin, user %s has access to all albums.=
 Browser Default=
@@ -61,6 +62,7 @@ Importing images...=
 Insert failed.=
 Insufficient permissions to edit photo=
 Invalid path=
+Missing a temporary folder.=
 Most Photographed People=
 Most Photographed Places=
 Most Populated Albums=
@@ -76,6 +78,7 @@ New User=
 Next=
 No EXIF header found.=
 No Photos Found=
+No file was uploaded.=
 No people have been added to this photo.=
 No people were found with a last name beginning with '%s'.=
 No photo was found.=
@@ -102,6 +105,9 @@ Send feedback to %s.=
 Skipping %s: File does not exist.=
 Skipping %s: Unsupported file type.=
 The image you requested could not be displayed.=
+The uploaded file exceeds the MAX_UPLOAD setting in config.inc.php (%s).=
+The uploaded file exceeds the upload_max_filesize directive (%s) in php.ini.=
+The uploaded file was only partially uploaded.=
 The user %s is currently defined as the default user and does not have permission to change its preferences. The current values are shown below but any changes made will be ignored until a different default user is defined.=
 The user '%s' is currently defined as the default user and does not have permission to change its password.=
 There are %s photos=
