Added some missing strings

--- a/lang/zoph_strings.txt
+++ b/lang/zoph_strings.txt
@@ -4,6 +4,7 @@
 %s chars max=
 %s images loaded.=
 %s photos in %s=
+%s photo(s) selected=
 (left to right, front to back).=
 1 - close your eyes=
 10 - museum=
@@ -232,6 +233,7 @@ in this album=
 in this category=
 in this place=
 include URL=
+insert relationship=
 is in photo=
 is not in photo=
 is not set.=
@@ -305,7 +307,9 @@ random photo=
 rate=
 rating=
 recreate thumbnails=
+relate=
 related photos=
+relationship=
 remove=
 reports=
 return=
@@ -313,6 +317,7 @@ rotate=
 rows=
 search=
 seconds=
+select=
 send as html=
 send fullsize=
 show additional attributes=
@@ -336,6 +341,7 @@ title=
 to (email)=
 to (name)=
 update=
+update relationship=
 updated=
 url=
 url description=
