Req#722617: read/display/handle more/full exif data

--- a/lang/zoph_strings.txt
+++ b/lang/zoph_strings.txt
@@ -49,6 +49,7 @@ Edit Photos (Page %s/%s)=
 Fields specified below will apply to all images imported.=
 File upload failed=
 For accessing these Albums you have to use this URL:=
+Full EXIF details=
 Grant access to all existing albums:=
 Granting access to an album will also grant access to that album's ancestors if required. Granting access to all albums will not overwrite previously granted permissions.=
 Hi=
@@ -202,6 +203,7 @@ delete user=
 delete=
 description=
 destination path=
+display all EXIF info=
 display camera info=
 display=
 edit photos %s to %s of %s=
@@ -226,6 +228,7 @@ from (your name)=
 gender=
 go=
 height=
+hide=
 home=
 import photos=
 import=
