Readded missing strings

--- a/lang/zoph_strings.txt
+++ b/lang/zoph_strings.txt
@@ -64,6 +64,7 @@ Importing images...=
 Insert failed.=
 Insufficient permissions to edit photo=
 Invalid path=
+Lightbox (Page %s/%s)=
 Missing a temporary folder.=
 Most Photographed People=
 Most Photographed Places=
@@ -92,6 +93,7 @@ Notify User=
 Notify=
 Or you may use the %s search page %s to find photos using multiple criteria. You may also view a %s randomly chosen photo %s like the one above.=
 Originally written by Jason Geiger, now maintained by Jeroen Roos with thanks to the following for their contributions:=
+Photos (Page %s/%s)=
 People=
 Places=
 Preferences=
