--- a/lang/zoph_strings.txt
+++ b/lang/zoph_strings.txt
@@ -22,6 +22,7 @@ An error occurred.=
 An unknown file upload error occurred.=
 Annotate Photo=
 As an admin, user %s has access to all albums.=
+Autocomplete=
 Browser Default=
 Categories=
 Change Password=
