Strings for album & category view

--- a/lang/zoph_strings.txt
+++ b/lang/zoph_strings.txt
@@ -3,8 +3,8 @@
 # replace it with a header modeled after those in the other files.
 %s chars max=
 %s images loaded.=
-%s photos in %s=
 %s photo(s) selected=
+%s photos in %s=
 (left to right, front to back).=
 1 - close your eyes=
 10 - museum=
@@ -17,15 +17,21 @@ Add comment=
 Admin=
 After this user is created they can be given access to albums.=
 Albums=
+Album view=
 All photos=
 An error occurred.=
 An unknown file upload error occurred.=
 Annotate Photo=
 As an admin, user %s has access to all albums.=
 Autocomplete=
+Automatic coverphoto=
+Automatic thumbnail=
 Browser Default=
 Categories=
+Category view=
 Change Password=
+Changed least recently=
+Changed most recently=
 Color Schemes=
 Comments=
 Confirm deletion of '%s' and its subalbums:=
@@ -43,6 +49,7 @@ Could not rename %s to %s.=
 Could not send mail.=
 Created directory=
 Dated directory will be appended=
+Default view=
 Description for first photo=
 Description for second photo=
 E-Mail Photo=
@@ -54,6 +61,7 @@ Full EXIF details=
 Grant access to all existing albums:=
 Granting access to an album will also grant access to that album's ancestors if required. Granting access to all albums will not overwrite previously granted permissions.=
 Hi=
+Highest ranked=
 Home=
 I have created a Zoph account for you=
 I have enabled access to the following albums for you:=
@@ -66,6 +74,7 @@ Insert failed.=
 Insufficient permissions to edit photo=
 Invalid path=
 Lightbox (Page %s/%s)=
+List=
 Missing a temporary folder.=
 Most Photographed People=
 Most Photographed Places=
@@ -79,6 +88,7 @@ New Person=
 New Photo=
 New Place=
 New User=
+Newest photo=
 Next=
 No EXIF header found.=
 No Photos Found=
@@ -93,14 +103,16 @@ No=
 Not rated=
 Notify User=
 Notify=
+Oldest photo=
 Or you may use the %s search page %s to find photos using multiple criteria. You may also view a %s randomly chosen photo %s like the one above.=
 Originally written by Jason Geiger, now maintained by Jeroen Roos with thanks to the following for their contributions:=
-Photos (Page %s/%s)=
 People=
+Photos (Page %s/%s)=
 Places=
 Preferences=
 Prev=
 Processing %s image(s).=
+Random=
 Reading directory=
 Received file=
 Regards,=
@@ -122,9 +134,11 @@ There is %s photo=
 These options are always available in the tabs on the upper right. Use the %s home %s link to return here. Click on any thumbnail to see a larger version along with information about that photo.=
 This photo is not in any albums.=
 This photo is not in any categories.=
+Thumbnails=
 To edit your preferences or change your password, click %s here %s.=
 To import images already on the server, specify the absolute path of a file name or directory. If a directory is specified, all images within the directory will be imported. If a destination path is given (relative to the top level image dir), the imported images will be copied there. Otherwise, they will not be moved.=
 To upload and import a local file, browse to the file and specify the destination path (relative to the top level image dir) in which it should be placed.=
+Tree=
 Up=
 User=
 Users=
@@ -348,11 +362,11 @@ timestamp=
 title=
 to (email)=
 to (name)=
-update=
 update relationship=
+update=
 updated=
-url=
 url description=
+url=
 user name=
 user=
 username=
